--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,86 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+/* Global Styles */
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+.search-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 20px;
+}
+
+mat-form-field {
+    width: 100%;
+    max-width: 600px;
+}
+
+.repositories-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+    padding: 20px;
+}
+.repository-card {
+    width: 100%;
+    max-width: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 250px;
+    overflow: hidden;
+}
+
+mat-card-header {
+    background-color: #f5f5f5;
+}
+
+mat-card-title {
+    font-size: 1.2em;
+    font-weight: bold;
+}
+
+mat-card-content {
+    flex-grow: 1;
+    margin-bottom: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+mat-card-actions .view-details-button {
+    background-color: #3f51b5;
+    color: white !important;
+}
+
+mat-card-actions .view-details-button:hover {
+    background-color: #45a049;
+}
+
+.description {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    height: 40px;
+    margin-top: 10px !important;
+}
+
+.repo-details {
+    display: flex;
+    justify-content: space-between;
+}
+
+mat-card-actions {
+    display: flex;
+    justify-content: flex-end;
+}
+
+button {
+    margin-top: 10px;
+}
